--- a/casio.html
+++ b/casio.html
@@ -1,7 +1,13 @@
+<!DOCTYPE html>
 <!---
 Creator: William Jawad
 https://twitter.com/will88m
 --->
+<html>
+<head>
+  <link rel="stylesheet" href="casio.css">
+</head>
+<body>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron&Noticia+Text&Archivo+Narrow&Balsamiq+Sans&Iceberg&Play&Michroma&Audiowide&display=swap" rel="stylesheet">
 
 
@@ -112,3 +118,5 @@ end of black keys
                 </span></H1>
             </div>
   </div>
+</body>
+</html>
